Fix overlap of text and poster on mobile

--- a/components/project.css
+++ b/components/project.css
@@ -41,8 +41,9 @@
   top: 0;
   z-index: 0;
   max-width: 100vw;
-  height: 100vh;
+  /* height: 100vh; */
   width: 100%;
+  overflow: visible;
 
   @media (min-width: 720px) {
     max-width: 25vw;
